--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="main-menu">
+    <div class="main-menu submenu">
         <div class="container">
             <div class="row">
                 <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
@@ -156,64 +156,123 @@
             </div>
         </div>
     </div>
-    <div class="pageTitle">
-        <span>About</span>
-    </div>
-
-    <div class="ContactCont projectCont">
+    <div class="ContactCont projectCont ">
         <div class="container">
-            <div class="row">
+            <div class="row margin-row">
                 <div class="col-lg-9 col-md-9 col-12">
-                    <div class="YellowOverlay"></div>
-                    <div class="aboutBox OurMission">
-                        <h4 class="aboutTitle">Our Mission</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
+                    <div class="aboutCont">
+                        <div class="aboutBox OurMission">
+                            <div class="YellowOverlay"></div>
+                            <h4 class="aboutTitle">Our Mission</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
 
-                    </div>
-                    <div class="aboutBox OurMission">
-                        <h4 class="aboutTitle">Our Mission</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
-
-                    </div>
-                    <div class="aboutBox OurMission">
-                        <h4 class="aboutTitle">Our Mission</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore corporis ipsam
-                            veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt laudantium cupiditate
-                            aperiam quidem doloremque voluptate.
-                        </p>
-
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-12">
+                    <a href="#">
+                        <div class="childDonate donate1">
+                            <div class="overlay"></div>
+                            <div class="DonateTxt text-center">
+                                <h5>Child Donate For Good Life</h5>
+                                <button class="btn Donate">
+                                    Donate</button>
+                            </div>
+
+
+                        </div>
+                    </a>
                 </div>
             </div>
+            <div class="row margin-row">
+                <div class="col-lg-9 col-md-9 col-12">
+                    <div class="aboutCont">
+
+                        <div class="aboutBox OurMission ourSurg">
+                            <div class="YellowOverlay blueOverlay"></div>
+                            <h4 class="aboutTitle">Our Strategy</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-12">
+                    <div class="childDonate greenbg">
+                        <div class="childDonateImg "><img src="asset/img/about33.png" alt=""></div>
+                        <div class="DonateTxt text-center">
+                            <h5>Child Donate For Good Life</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row margin-row">
+                <div class="col-lg-9 col-md-9 col-12">
+                    <div class="aboutCont">
+
+                        <div class="aboutBox OurMission OurVision ">
+                            <div class="YellowOverlay greenOverlay"></div>
+                            <h4 class="aboutTitle">Our Mission</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi inventore
+                                corporis ipsam
+                                veniam ex quaerat optio, amet omnis, enim ut dolorum, id quod deserunt
+                                laudantium cupiditate
+                                aperiam quidem doloremque voluptate.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-12">
+                    <a href="#">
+                        <div class="childDonate">
+                            <div class="childDonateImg"><img src="asset/img/about11.png" alt=""></div>
+                            <div class="DonateTxt text-center">
+                                <h5>Child Donate For Good Life</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
 
     </div>
+
+
     <div class="footer">
         <div class="container">
             <div class="row">
@@ -297,6 +356,7 @@
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
+    <script src="asset/js/wow.js"></script>
 
     <script src="asset/js/main.js"></script>
 
