--- a/news-single.html
+++ b/news-single.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div class="main-menu">
+    <div class="main-menu submenu">
         <div class="container">
             <div class="row">
                 <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
