--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <div class="main-menu">
+    <div class="main-menu submenu">
         <div class="container">
             <div class="row">
                 <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
