--- a/Donat.html
+++ b/Donat.html
@@ -211,7 +211,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eligendi, placeat saepe
                             doloremque, perspiciatis commodi ipsam nesciunt modi beatae dolorum, fugit voluptatibus
                             necessitatibus recusandae. Non veniam aspernatur dignissimos in quaerat.</p>
-                        <form action="" class="donateForm">
+                        <form action="" class="donateForm clearfix">
                             <div class="form-group inlinegroup">
                                 <input type="text" placeholder="Name" class="form-control ">
                             </div>
@@ -238,6 +238,7 @@
                             <div class="form-group">
                                 <textarea cols="5" rows="5" placeholder="message" class="form-control"></textarea>
                             </div>
+                            <button class="btn Donate payDonate float-right"> pay(100$)</button>
                         </form>
                     </div>
                 </div>
