--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
     <div class="pageTitle">
         <span>Contact</span>
     </div>
-    <div id="map"></div>
+    <div id="map" style="height:500px ;width:100%;"> </div>
 
     <div class="ContactCont">
         <div class="container">
@@ -302,7 +302,8 @@
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
                 center: { lat: -34.397, lng: 150.644 },
-                zoom: 8
+                zoom:5
+            
             });
         }
     </script>
@@ -311,8 +312,9 @@
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWZJ97WjmF5OBeftsvQBnGuYoWg8VNh-g&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxrnwTyDI68in8hdLFZC-3EHx1E_GhdhU&callback=initMap"
         async defer></script>
+        <script src="asset/js/wow.js"></script>
     <script src="asset/js/main.js"></script>
 
 
