--- a/videos.html
+++ b/videos.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
     <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="asset/css/lightbox.css" type="text/css">
+
     <link rel="stylesheet" href="asset/css/style.css" type="text/css">
 </head>
 
@@ -295,6 +297,8 @@
     <script src="asset/js/bootstrap.min.js"></script>
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
+    <script src="asset/js/lightbox.js"></script>
+
     <script src="asset/js/main.js"></script>
 
 </body>
