--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
         <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="asset/css/style.css" type="text/css">
         <link rel="stylesheet" href="asset/css/responsive.css" type="text/css">
         <link rel="stylesheet" href="asset/css/animate.css" type="text/css">
+
+        <link rel="stylesheet" href="asset/css/style.css" type="text/css">
+
 
 
 </head>
@@ -29,9 +31,68 @@
 <body>
 
         <div class="main-menu">
-                <div class="container">
-                        <div class="row">
-                                <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
+                <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
+                        <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="About.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link dropdown-toggle" href="Projects.html" id="navbarDropdown"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">Our
+                                                Projects</a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">Another
+                                                        action</a>
+                                                <div class="dropdown-divider"></div>
+                                                <a class="dropdown-item" href="#">Something else
+                                                        here</a>
+                                        </div>
+                                <li class="nav-item">
+                                        <a class="nav-link " href="gallery.html" tabindex="-1">Media
+                                                Center</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link " href="Donat.html" tabindex="-1">Donate</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link " href="contact.html" tabindex="-1">Contact</a>
+                                </li>
+                        </ul>
+                        <div class="social d-lg-none d-md-none d-block">
+                                <ul class="navbar-nav">
+
+                                        <li class="nav-item">
+                                                <a href="#" class="nav-link "><span class="languge">عربي</span>
+                                                </a>
+                                        </li>
+
+
+                                </ul>
+                                <button class="btn btn-success Donate">
+                                        Donate</button>
+                        </div>
+
+
+                </div>
+                <nav class="navbar navbar-custom navbar-expand-lg">
+
+                        <div class="col-lg-3 col-md-3 col-12 order-2 order-md-1 clearfix">
+                                <a class="navbar-brand" href="#"><img src="asset/img/logo.png" alt=""><span> jisr
+                                                alAmal</span></a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-12 order-1 order-md-2">
+
+                                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                        aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse d-none d-lg-block d-md-block" id="navbarNav">
                                         <ul class="navbar-nav">
                                                 <li class="nav-item active">
                                                         <a class="nav-link" href="index.html">Home</a>
@@ -40,8 +101,8 @@
                                                         <a class="nav-link" href="About.html">About</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link dropdown-toggle" href="Projects.html" id="navbarDropdown"
-                                                                role="button" data-toggle="dropdown"
+                                                        <a class="nav-link dropdown-toggle" href="Projects.html"
+                                                                id="navbarDropdown" role="button" data-toggle="dropdown"
                                                                 aria-haspopup="true" aria-expanded="false">Our
                                                                 Projects</a>
                                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,7 +121,8 @@
                                                         <a class="nav-link " href="Donat.html" tabindex="-1">Donate</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link " href="contact.html" tabindex="-1">Contact</a>
+                                                        <a class="nav-link " href="contact.html"
+                                                                tabindex="-1">Contact</a>
                                                 </li>
                                         </ul>
                                         <div class="social d-lg-none d-md-none d-block">
@@ -80,131 +142,38 @@
 
 
                                 </div>
-                                <nav class="navbar navbar-custom navbar-expand-lg">
-
-                                        <div class="col-lg-2 col-md-1 col-12 order-2 order-md-1 clearfix">
-                                                <a class="navbar-brand" href="#"><img src="asset/img/logo.png"
-                                                                alt=""></a>
-                                        </div>
-                                        <div class="col-lg-8 col-md-9 col-12 order-1 order-md-2">
-
-                                                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                                        data-target="#navbarNav" aria-controls="navbarNav"
-                                                        aria-expanded="false" aria-label="Toggle navigation">
-                                                        <span class="navbar-toggler-icon"></span>
-                                                </button>
-                                                <div class="collapse navbar-collapse d-none d-lg-block d-md-block"
-                                                        id="navbarNav">
-                                                        <ul class="navbar-nav">
-                                                                <li class="nav-item active">
-                                                                        <a class="nav-link" href="index.html">Home</a>
-                                                                </li>
-                                                                <li class="nav-item">
-                                                                        <a class="nav-link" href="About.html">About</a>
-                                                                </li>
-                                                                <li class="nav-item">
-                                                                        <a class="nav-link dropdown-toggle"
-                                                                                href="Projects.html" id="navbarDropdown"
-                                                                                role="button" data-toggle="dropdown"
-                                                                                aria-haspopup="true"
-                                                                                aria-expanded="false">Our
-                                                                                Projects</a>
-                                                                        <div class="dropdown-menu"
-                                                                                aria-labelledby="navbarDropdown">
-                                                                                <a class="dropdown-item"
-                                                                                        href="#">Action</a>
-                                                                                <a class="dropdown-item"
-                                                                                        href="#">Another
-                                                                                        action</a>
-                                                                                <div class="dropdown-divider"></div>
-                                                                                <a class="dropdown-item"
-                                                                                        href="#">Something else
-                                                                                        here</a>
-                                                                        </div>
-                                                                <li class="nav-item">
-                                                                        <a class="nav-link " href="gallery.html"
-                                                                                tabindex="-1">Media
-                                                                                Center</a>
-                                                                </li>
-                                                                <li class="nav-item">
-                                                                        <a class="nav-link " href="Donat.html"
-                                                                                tabindex="-1">Donate</a>
-                                                                </li>
-                                                                <li class="nav-item">
-                                                                        <a class="nav-link " href="contact.html"
-                                                                                tabindex="-1">Contact</a>
-                                                                </li>
-                                                        </ul>
-                                                        <div class="social d-lg-none d-md-none d-block">
-                                                                <ul class="navbar-nav">
-
-                                                                        <li class="nav-item">
-                                                                                <a href="#" class="nav-link "><span
-                                                                                                class="languge">عربي</span>
-                                                                                </a>
-                                                                        </li>
-
-
-                                                                </ul>
-                                                                <button class="btn btn-success Donate">
-                                                                        Donate</button>
-                                                        </div>
-
-
-                                                </div>
-                                        </div>
-                                        <div
-                                                class="col-lg-2 col-md-2 col-6 order-2 order-md-3 d-lg-block d-md-block d-none">
-                                                <div class="social">
-                                                        <ul class="navbar-nav">
-
-                                                                <li class="nav-item">
-                                                                        <a href="#" class="nav-link "><span
-                                                                                        class="languge">عربي</span>
-                                                                        </a>
-                                                                </li>
-
-
-                                                        </ul>
-                                                        <button class="btn btn-success Donate">
-                                                                Donate</button>
-                                                </div>
-
-                                        </div>
-
-
-                                </nav>
                         </div>
-                </div>
+                        <div class="col-lg-3 col-md-3 col-6 order-2 order-md-3 d-lg-block d-md-block d-none">
+                                <div class="social">
+                                        <ul class="navbar-nav">
+
+                                                <li class="nav-item">
+                                                        <a href="#" class="nav-link "><span class="languge">عربي</span>
+                                                        </a>
+                                                </li>
+
+
+                                        </ul>
+                                        <button class="btn btn-success Donate">
+                                                Donate</button>
+                                        <div class="search">
+                                                <i class="fas fa-search"></i>
+                                                <input type="text" placeholder="enter keywords.." class="form-control">
+                                        </div>
+                                </div>
+
+                        </div>
+
+
+                </nav>
         </div>
         <div class="hero">
-                <div class="heroText text-center slideInRight animated wow"><span class="">We Are Dream</span>
+                <div class="heroText slideInRight animated  wow delay-.2s"><span class="">We Are Dream</span>
                         <p>To delight all the children in the World</p>
                         <button class="btn-success Donate readMore">Read More</button>
                 </div>
-                <div class="heroSlider owl-carousel">
-                        <div class="sliderItem">
-                                <div class="overlay"></div>
-                                <img src="asset/img/herobg.jpg" alt="">
-                        </div>
-                        <div class="sliderItem">
-
-                                <div class="overlay"></div>
-                                <img src="asset/img/herobg.jpg" alt="">
-                        </div>
-                        <div class="sliderItem">
-
-                                <div class="overlay"></div>
-                                <img src="asset/img/herobg.jpg" alt="">
-                        </div>
-                </div>
-
-
-
-
         </div>
         <div class="workSection text-center">
-
                 <div class="container">
                         <div class="row justify-content-center">
                                 <div class="col-lg-10 col-md-10 col-12">
@@ -403,6 +372,25 @@
 
                                                 </div>
 
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+
+        </div>
+        <div class="subscribeSec">
+                <div class="container">
+                        <div class="row justify-content-center text-center">
+                                <div class="col-md-8">
+                                                <h5>SUBCRIBE WEEKLY NEWSLETTER</h5>
+                                        <div class="subscribeForm">
+                                                <form>
+                                                        <input type="text" class="form-control" placeholder="your Email">
+                                                        <input type="text" class="form-control" placeholder="your Name">
+                                                        <input type="text" class="form-control" placeholder="your Phone">
+
+                                                </form>
+                                                <button><i class="fa fa-paper-plane"></i>Submit</button>
                                         </div>
                                 </div>
                         </div>
