--- a/gallery-single.html
+++ b/gallery-single.html
@@ -306,6 +306,8 @@
     <script src="asset/js/owl.carousel.js"></script>
     <script src="asset/js/owl.carousel.min.js"></script>
     <script src="asset/js/lightslider.js"></script>
+    <script src="asset/js/wow.js"></script>
+
     <script src="asset/js/main.js"></script>
 
 </body>
