--- a/About.html
+++ b/About.html
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row margin-row">
                 <div class="col-lg-9 col-md-9 col-12">
-                    <div class="aboutCont">
+                    <div class="aboutCont margin-row">
                         <div class="aboutBox OurMission">
                             <div class="YellowOverlay"></div>
                             <h4 class="aboutTitle">Our Mission</h4>
@@ -181,27 +181,9 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-12">
-                    <a href="#">
-                        <div class="childDonate donate1">
-                            <div class="overlay"></div>
-                            <div class="DonateTxt text-center">
-                                <h5>Child Donate For Good Life</h5>
-                                <button class="btn Donate">
-                                    Donate</button>
-                            </div>
+                    <div class="aboutCont margin-row">
 
-
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="row margin-row">
-                <div class="col-lg-9 col-md-9 col-12">
-                    <div class="aboutCont">
-
-                        <div class="aboutBox OurMission ourSurg">
+                        <div class="aboutBox OurMission ourSurg ">
                             <div class="YellowOverlay blueOverlay"></div>
                             <h4 class="aboutTitle">Our Strategy</h4>
                             <p>
@@ -221,19 +203,7 @@
 
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-12">
-                    <div class="childDonate greenbg">
-                        <div class="childDonateImg "><img src="asset/img/about33.png" alt=""></div>
-                        <div class="DonateTxt text-center">
-                            <h5>Child Donate For Good Life</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row margin-row">
-                <div class="col-lg-9 col-md-9 col-12">
-                    <div class="aboutCont">
+                    <div class="aboutCont  margin-row">
 
                         <div class="aboutBox OurMission OurVision ">
                             <div class="YellowOverlay greenOverlay"></div>
@@ -256,18 +226,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-12">
-                    <a href="#">
-                        <div class="childDonate">
-                            <div class="childDonateImg"><img src="asset/img/about11.png" alt=""></div>
-                            <div class="DonateTxt text-center">
-                                <h5>Child Donate For Good Life</h5>
-                            </div>
-                        </div>
-                    </a>
+                <div class="col-md-3">
+                    <div class="linksBox">
+                        <h4> Links </h4>
+                        <ul class="LinksList">
+                            <li><a href="">Link 1</a></li>
+                            <li><a href="">Link 1</a></li>
+                            <li><a href="">Link 1</a></li>
+                            <li><a href="">Link 1</a></li>
+                        </ul>
+                        
+                     
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
 
     </div>
