--- a/index.html
+++ b/index.html
@@ -479,6 +479,10 @@
         <script src="asset/js/bootstrap.min.js"></script>
         <script src="asset/js/owl.carousel.js"></script>
         <script src="asset/js/owl.carousel.min.js"></script>
+        <script src="asset/js/lightslider.min.js"></script>
+        <script src="asset/js/lightslider.js"></script>
+
+
         <script src="asset/js/wow.js"></script>
         <script src="asset/js/main.js"></script>
 
